--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
         </div>  
         <div class="main">
             <div class="humberger">
-                <img class="tick" src="Images/tick.png" alt="" width="25">
+                <img class="tick" src="Images/sidebar.png" alt="" width="25">
                 <img class="cross" src="Images/cross.png" alt="" width="25">
             </div>
             <div class="contactform">
