--- a/Blog.html
+++ b/Blog.html
@@ -13,7 +13,7 @@
         <div class="sidebar  sidebar-Go">
             <nav>
                 <ul>
-                    <li><a href="/">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="MyIntro.html">My Intro</a></li>
                     <li><a href="Services.html">Services</a></li>
                     <li><a href="Blog.html">Blog</a></li>
