--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="sidebar sidebar-Go">
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="MyIntro.html">My Intro</a></li>
                     <li><a href="Services.html">Services</a></li>
                     <li><a href="Blog.html">Blog</a></li>
